# quick-book-agentic-ai-workflow

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  app.py  config.py
src/agent/: agent.py  dialog_manager.py  intent_selector.py  nlu.py
src/models/: appointment.py  user.py
src/schemas/: intents.yaml
src/services/: __init__.py  calendar_service.py  fireworks_client.py  notification_service.py
src/utils/: validators.py
tests/: test_booking_flow.py  test_intent_selector.py
